compiler/tests/success/subarrays/x86-64/bla.jazz
export fn main (reg u64 i) -> reg u64 {
  reg u64 res;
  stack u64[5] s;
  reg ptr u64[1] r1 r2;
  s[5] = 0;
  r1 = s[0:1];
  r2 = s[1:1];
  r1[i+1] = 3;
  res = r1[0];
  r2[0] = 4;
  res += r2[0];
  return res;
}
